Bug 131634 - Crash in sd::View::SdrEndTextEdit(bool)
Summary: Crash in sd::View::SdrEndTextEdit(bool)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.4
Keywords: bibisectRequest, haveBacktrace, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2020-03-27 17:43 UTC by Xisco Faulí
Modified: 2021-09-01 11:51 UTC (History)
7 users (show)

See Also:
Crash report or crash signature: ["sd::View::SdrEndTextEdit(bool)"]
Regression By:


Attachments
screencast (625.05 KB, video/x-matroska)
2020-03-27 20:32 UTC, Xisco Faulí
Details
Backtrace (19.08 KB, text/plain)
2020-03-28 05:47 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-03-27 17:43:44 UTC
Steps to reproduce:
1. Open Impress
2. Click on the textbox and add some text
3. Click outside the textbox
4. Click on the textbox and delete the text with backspace
5. hold Ctrl + Z -> textbox is blank
6. Redo -> Text is displayed
7. Click on the textbox and Undo once

-> Crash

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 9b784a74a2f09e9eb9a0fd41d58c1f6b47ee6ee6
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

but not in

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 1 Julien Nabet 2020-03-27 19:28:37 UTC
On pc Debian x86-64 with master sources (+gtk3) updated today, I don't reproduce this (I tried twice).

Do you reproduce each time you follow these steps?
Would it be possible you attach a screencast?

(I don't put this one at NEEDINFO since I trust you as QA expert + more people would give it a try).
Comment 2 Xisco Faulí 2020-03-27 20:32:17 UTC
Created attachment 159076 [details]
screencast
Comment 3 Julien Nabet 2020-03-27 21:34:12 UTC
Thank you for your feedback, sorry I still don't reproduce this, uncc myself.
Comment 4 Oliver Grimm 2020-03-27 21:46:55 UTC
cannot reproduce in
Version: 6.4.2.2
CPU-Threads: 2; BS: Linux 5.4; UI-Render: Standard; VCL: kf5; 
Gebietsschema: de-DE (de_DE.UTF-8); UI-Sprache: de-DE
Calc: threaded
Comment 5 Aron Budea 2020-03-28 05:47:58 UTC
Created attachment 159086 [details]
Backtrace

I can confirm, with the following, slightly modified repro steps:

1. Open Impress.
2. Click on the textbox and add some text.
3. Click outside the textbox.
4. Click on the textbox and delete the text with backspace.
5. Hold Ctrl + Z to undo -> textbox is blank.
6. Hold Ctrl + Y to redo -> the text appears, but afterwards the whole textbox disappears.
7. Undo once -> textbox with text comes back.
8. Click on the textbox and Undo once.

-> Crash.

Attaching backtrace taken with a fresh master build.
Comment 6 Aron Budea 2020-03-28 05:57:43 UTC
Already in 4.2.0.4. 4.1.0.4 has problems with undo, which will make bibisecting the bug tough.
Comment 7 Caolán McNamara 2020-12-09 10:55:57 UTC
This probably comes from...

commit 12a4200e8ff7f045efcc7e9d15a24b15b248c437
Author: Armin Le Grand <alg@apache.org>
Date:   Thu Aug 9 08:42:27 2012 +0000

    Related: #i120498# Enhanced Undo/Redo and user experience...
    
    when editing texts in graphic objects and/or tables

and it also crashes in Apache OpenOffice
Comment 8 Xisco Faulí 2021-04-09 09:44:05 UTC
Still reproducible in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 78eaf6489a6542378ffab7eef39ec0a2c5f1a10a
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 9 raal 2021-04-10 16:51:01 UTC
(In reply to Caolán McNamara from comment #7)
> This probably comes from...
> 
> commit 12a4200e8ff7f045efcc7e9d15a24b15b248c437
> Author: Armin Le Grand <alg@apache.org>
> Date:   Thu Aug 9 08:42:27 2012 +0000
> 

Adding CC to Armin
Comment 10 Xisco Faulí 2021-04-11 19:26:38 UTC
@Mark Hung, since you fixed bug 136956 I thought you might be interested in this issue
Comment 11 Commit Notification 2021-04-16 13:04:46 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a641c71f8191e83bb6c408d3ff51a58d7dd4af9

tdf#131634 Don't redo actions created before text edit begins.

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2021-04-20 19:49:58 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 93bb5fcba9e58eeeaaed9521c3bb4eecf9b91ac1
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Mark Hung, thanks for fixing this issue!! Closing as VERIFIED FIXED
Comment 13 Commit Notification 2021-04-21 09:41:45 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/016a83306f6744892038b1bd9e6a6817e6a8c087

tdf#131634 Don't redo actions created before text edit begins.

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.